# NerouRuntime

./: .editorconfig  .gitignore  CMakeLists.txt  _build_helper.bat  _build_log.bat  _build_now.bat  _build_vs2026.bat  _final_build.bat  _fix_tokens.py  _full_build.bat  _quick_build.bat  _quick_check.bat  _rebuild_fix.bat  build.ps1  build_auto_ci.cmd  build_dev.cmd  build_log.txt  build_native.bat  init_workspace.bat  launch_app.bat  readme.md  requirements.txt  resource_layout.json
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/AI/: AgentCore.cpp  AgentCore.h  AgentMemoryStore.cpp  AgentMemoryStore.h  AgentPanel.cpp  AgentPanel.h  ExperienceEngine.cpp  ExperienceEngine.h  LLMBridge.cpp  LLMBridge.h
Source/Acquisition/: BoardManager.cpp  BoardManager.h
Source/Application/: GlobalContextStore.cpp  GlobalContextStore.h  NotificationCenter.h  PipelineStore.cpp  PipelineStore.h  RuntimeSettingsStore.cpp  RuntimeSettingsStore.h  WorkflowOrchestrator.cpp  WorkflowOrchestrator.h
Source/Core/: AuditTrail.cpp  AuditTrail.h  ChineseLocale.h  CjkFontFallback.h  EEGFileReader.cpp  EEGFileReader.h  JsonFileIO.h  JsonVarHelpers.h  NpzEEGLoader.cpp  NpzEEGLoader.h  ProjectPaths.h  PythonBridge.h  SignalNorm.h  SystemLogger.cpp  SystemLogger.h  TrainPreflight.h  Utf8FileText.h  Utf8Literals.h
Source/Domain/: EEGRecord.h  Entities.h  MetadataSerializer.h  PipelineNode.h  TaskState.h
Source/Inference/: OnnxRunner.cpp  OnnxRunner.h
Source/Services/: AcquisitionService.cpp  AcquisitionService.h  DatasetPreparationService.cpp  DatasetPreparationService.h  ModelRegistryService.cpp  ModelRegistryService.h  RuntimeDataExportService.cpp  RuntimeDataExportService.h  TrainingService.cpp  TrainingService.h  ValidationService.cpp  ValidationService.h
Source/Tests/: PipelineStoreTest.h
Source/UI/: RealtimeMetricsCanvas.cpp  RealtimeMetricsCanvas.h  WaveformCanvas.cpp  WaveformCanvas.h
Source/UI/Components/: AboutDialog.cpp  AboutDialog.h  ActivityTimeline.cpp  ActivityTimeline.h  BeautifyComponents.h  CommandPalette.cpp  CommandPalette.h  ConfusionMatrixView.cpp  ConfusionMatrixView.h  LayoutComponents.h  MaterialCard.cpp  MaterialCard.h  MaterialChip.cpp  MaterialChip.h  MaterialSnackbar.cpp  MaterialSnackbar.h  PerformanceCurveView.cpp  PerformanceCurveView.h  SettingsDialog.cpp  SettingsDialog.h  ShortcutHelpOverlay.cpp  ShortcutHelpOverlay.h  SystemLogPanel.cpp  SystemLogPanel.h  WorkflowStepperBar.cpp  WorkflowStepperBar.h
Source/UI/Google/: GoogleNavigationRail.cpp  GoogleNavigationRail.h  GoogleTheme.h  GoogleTopAppBar.cpp  GoogleTopAppBar.h  MaterialFAB.cpp  MaterialFAB.h  ParamFieldRegistry.cpp  ParamFieldRegistry.h  ParamInspectorPanel.cpp  ParamInspectorPanel.h
Source/UI/Pages/: AcquisitionPage.cpp  AcquisitionPage.h  OverviewPage.cpp  OverviewPage.h  PreparationPage.cpp  PreparationPage.h  TrainingPage.cpp  TrainingPage.h  ValidationPage.cpp  ValidationPage.h
Source/UI/Panels/: WorkflowPanels.cpp  WorkflowPanels.h
Source/UI/Shell/: AppShell.h
Source/UI/Theme/: DesignTokenStore.h  DesignTokens.h  ModernLookAndFeel.cpp  ModernLookAndFeel.h
data/processed_npz/: README.md
data/samples/: README.md
data/training_files/: README.md
docs/: DESIGN_SYSTEM.md  ENTERPRISE_EEG_WORKBENCH_BASELINE.md  ENTERPRISE_MEDICAL_DEVELOPMENT_PLAN.md  FILE_FIRST_REDESIGN.md  GUI_SIMPLIFICATION_PROPOSAL.md  MASTER_PRODUCT_SPEC.md  MODEL_TRAINING_ENGINEERING.md  PRD.md  PRODUCT_PLAN.md  PRODUCT_SIMPLIFICATION_RECOMMENDATIONS.md  README.md  UI_SIMPLIFY_EXECUTION_PLAN.md  UX_SIMPLIFICATION_PLAN.md
logs/inference/: README.md
logs/runtime_data/: README.md
logs/training/: README.md
onnx/: README.md
onnx/deploy/: README.md
onnx/models/: README.md
onnx/models/anesthesia_depth_v1/: labels.json  manifest.json  model.onnx
onnx/models/artifact_detector_v1/: labels.json  manifest.json  model.onnx
onnx/models/attention_monitor_v1/: labels.json  manifest.json  model.onnx
onnx/models/bci_motor_imagery_v1/: labels.json  manifest.json  model.onnx
onnx/models/brain_age_v1/: labels.json  manifest.json  model.onnx
onnx/models/cognitive_workload_v1/: labels.json  manifest.json  model.onnx
onnx/models/demo_train_v1/: labels.json  manifest.json  model.onnx
onnx/models/drowsiness_detector_v1/: labels.json  manifest.json  model.onnx
onnx/models/eeg_denoise_v6/: manifest.json  model.onnx
onnx/models/emotion_recognition_v1/: labels.json  manifest.json  model.onnx
onnx/models/eog_intent_v1/: labels.json  manifest.json  model.onnx
onnx/models/erp_p300_detector_v1/: labels.json  manifest.json  model.onnx
onnx/models/meditation_state_v1/: labels.json  manifest.json  model.onnx
onnx/models/movement_potential_v1/: labels.json  manifest.json  model.onnx
onnx/models/my_bci_v1/: manifest.json
onnx/models/my_model_v1/: manifest.json  model.onnx
onnx/models/my_model_v1_retrain/: manifest.json  model.onnx
onnx/models/quality_scorer_v1/: labels.json  manifest.json  model.onnx
onnx/models/seizure_detector_v1/: labels.json  manifest.json  model.onnx
onnx/models/seizure_predictor_v1/: labels.json  manifest.json  model.onnx
onnx/models/sleep_stage_v1/: labels.json  manifest.json  model.onnx
onnx/models/spike_detector_v1/: labels.json  manifest.json  model.onnx
onnx/models/ssvep_detector_v1/: labels.json  manifest.json  model.onnx
onnx/models/train_data_run_v1/: labels.json  manifest.json  (+1 more)
onnx/runtime_data/: README.md
onnx/runtime_packages/: README.md
onnx/templates/: README.md
python_core/: __init__.py  build_app_icons.py  env_probe.py  export_runtime_data.py  generate_demo_data.py  model_presets.py  pack_recording_npz.py  preprocess.py  train.py
python_core/export/: __init__.py  onnx_exporter.py
python_core/io/: __init__.py  mne_loader.py
python_core/preprocess/: mne_pipeline.py
python_core/validation/: __init__.py  onnxruntime_validator.py
reports/training/: README.md
reports/validation/: README.md
tools/: _build_once.cmd  check_utf8.py  fetch_onnxruntime_directml.ps1  fix_final.py  fix_remaining.py  fix_three_lines.py  scan_artifacts.py
(+46 files in other folders)
